<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Yasme</string>

    <string name="language">en</string>

    <!-- Menu -->
    <string name="action_chats">Chats</string>
    <string name="action_chat">Chat</string>
    <string name="action_add_chat">Add chat</string>
    <string name="action_search_contact">Search contact</string>
    <string name="action_contacts">Contacts</string>
    <string name="action_chat_settings">Chat settings</string>

    <string name="context_show_settings">settings</string>
    <string name="context_leave">leave Chat</string>

    <!-- Home -->
    <string name="title_activity_home">Yasme Home</string>
    <string name="button_showChat">TestChat</string>
    <string name="usr_name_hint">Username</string>
    <string name="empty_chat_list">To start a new chat, tap here or on the contact symbol
        ([img src=ic_action_cc_bcc_light/]) in the action bar</string>
    <string name="media_found">media file</string>

    <!-- Chat -->
    <string name="title_activity_chat">Yasme</string>
    <string name="button_send">Send</string>
    <string name="button_update">Update</string>
    <string name="type_text">Enter text here</string>
    <string name="title_activity_yasme_login">Login</string>
    <string name="title_activity_invite_to_chat">Invite to chat</string>
    <string name="title_activity_yasme_contact">Contacts</string>
    <string name="title_section1">All Contacts</string>
    <string name="title_section2">Search Contact</string>
    <string name="title_section3">Own Profile</string>
    <string name="title_section4">QR Code</string>
    <string name="hello_world">Hello world!</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="illegal_characters">Only certain characters allowed</string>
    <string name="select_image_source_title">Select image source</string>
    <string name="select_image_source_message">Take a picture (if a camera is available) or select one from your gallery</string>
    <string name="select_camera">Camera</string>
    <string name="select_gallery">Gallery</string>

    <!-- Invite to chat -->
    <string name="button_start_chat">Chat!</string>
    <string name="toast_no_selection">Mark the users with whom you want to chat</string>

    <!-- Contacts -->
    <string name="contact_title">Contacts</string>
    <string name="button_search">Search</string>
    <string name="contact_header" translatable="false">Contact</string>
    <string name="own_contact_header" translatable="false">Contact</string>
    <string-array name="search_spinner_content">
        <item>Search By Name</item>
        <item>Search By E-Mail</item>
        <item>Search By YD</item>
    </string-array>
    <string name="phone_number">Telephone number</string>
    <string name="contact_added_success">was successfully added to your contacts</string>
    <string name="contact_already_added">has already been added to your contact list</string>
    <string name="search_no_results">No results</string>
    <string name="empty_contacts">You do not have any contacts yet. Tap here to search for others.</string>
    <string name="empty_contacts_swipe">You do not have any contacts yet. Swipe to the right hand side to search for others.</string>
    <string name="scan_contact">Scan a friend</string>
    <string name="qr_not_valid">This seems not to be a valid Yasme QR code!</string>
    <string name="please_wait">Please wait ...</string>
    <string name="public_keys_differ">Warning! Server public key differs! This might be a serious security vulnerability!</string>

    <!-- Contact details -->
    <string name="contact_details_start_chat">Chat!</string>
    <string name="contact_details_add_contact">Add to contacts</string>
    <string name="contact_details_email">Email</string>
    <string name="contact_details_email_default">No email address</string>
    <string name="contact_details_compose_email_action">Compose email...</string>
    <string name="contact_details_email_default_subject"></string>
    <string name="contact_details_email_default_body"></string>


    <!-- Own profile -->
    <string name="own_profile_email">Email</string>
    <string name="own_profile_id">YD</string>
    <string name="change_hint_text">With a click on your name or your profile picture you can change it</string>
    <string name="picture_changed">Successfully uploaded profile picture</string>

    <!-- Settings -->
    <string name="action_settings">Settings</string>

    <!-- Notification -->
    <string name="notification_message">"Received new messages"</string>
    <string name="unable_create_chat">Unable to create new Chat. Maybe there is an internal
        server error</string>
    <string name="unable_open_chat">Yasme was not able to open the chat</string>
    <string name="device_registration_failed">Unfortunately, your device could not be registered. Please retry to login later.</string>

    <!-- Other -->
    <string name="mime_image">media/image</string>
    <string name="mime_text">text/plain</string>
</resources>
