<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yasme.android.ui.activities.InviteToChatActivity" >

    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_contacts"
        android:icon="@drawable/ic_action_cc_bcc"/>

    <item
        android:id="@+id/action_chats"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/action_chats"
        android:icon="@drawable/ic_action_storage"/>

    <item android:id="@+id/action_settings"
        android:visible="false"
        android:title="@string/action_settings"
        android:orderInCategory="100"
        android:showAsAction="never" />
</menu>
