<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.yasme.android.ui.activities.ContactActivity" >

    <item
        android:id="@+id/action_search_contact"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_search_contact"
        android:icon="@drawable/ic_action_search"/>

     <item
        android:id="@+id/action_chats"
        android:orderInCategory="300"
        android:showAsAction="always"
        android:title="@string/action_chats"

        android:icon="@drawable/ic_action_storage"/>

    <item
        android:visible="false"
        android:id="@+id/action_settings"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"/>
</menu>
