<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="de.fau.cs.mad.yasme.android.ui.activities.ChatListActivity" >

    <item
        android:id="@+id/action_add_chat"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/action_add_chat"
        android:icon="@drawable/ic_action_add_group"/>

    <item
        android:id="@+id/action_contacts"
        android:orderInCategory="200"
        android:showAsAction="ifRoom"
        android:title="@string/action_contacts"
        android:icon="@drawable/ic_action_cc_bcc"/>

    <item
        android:visible="false"
        android:id="@+id/action_settings"
        android:orderInCategory="300"
        android:showAsAction="never"
        android:title="@string/action_settings"
        android:icon="@drawable/ic_action_settings"/>

    <item
        android:visible="false"
        android:id="@+id/sign_out"
        android:orderInCategory="400"
        android:showAsAction="never"
        android:title="Sign out"
        android:icon="@drawable/ic_action_chat"/>

</menu>
