<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp"
    tools:context=".ui.UserDetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_header"
        android:textStyle="bold"
        android:textSize="16pt"
        android:id="@+id/contact_header"
        android:layout_margin="5pt" />


    <!--<ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@color/user_details_window"
        android:id="@+id/imageView"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:minHeight="20mm"
        android:minWidth="20mm"
        android:src="@android:drawable/ic_menu_camera"
        android:layout_margin="2mm" />-->

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:text="@string/contact_details_email"
        android:id="@+id/mailView"
        android:textSize="8pt" />

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp" >

        <TextView
            android:layout_gravity="center"
            android:layout_alignParentLeft="true"
            android:text="@string/contact_details_email_default"
            android:id="@+id/mailViewText"
            android:textSize="10pt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <ImageButton
            android:layout_width="50dp"
            android:layout_height="40dp"
            android:id="@+id/mail_image_button"
            android:layout_gravity="center"
            android:layout_alignParentRight="true"
            android:src="@android:drawable/ic_dialog_email"
            android:adjustViewBounds="false" />

    </RelativeLayout>

    <Button
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_details_start_chat"
        android:id="@+id/contact_detail_newchat"
        android:layout_gravity="center" />

    <Button
        android:layout_marginTop="20px"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/contact_details_add_contact"
        android:id="@+id/contact_detail_addcontact"
        android:layout_gravity="center" />

</LinearLayout>
