<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ui.OwnProfileFragment">

    <EditText
        android:id="@+id/own_profile_header"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5pt"
        android:background="@android:color/transparent"
        android:cursorVisible="true"
        android:text="@string/own_contact_header"
        android:textSize="16pt"
        android:textStyle="bold"
        android:inputType="text" />


    <RelativeLayout
        android:layout_width="100dip"
        android:layout_height="100dip"
        android:layout_gravity="center_horizontal"
        android:layout_margin="15dip"
        android:gravity="center_horizontal"
        android:id="@+id/relativeLayout">

        <ImageView
            android:id="@+id/own_profile_picture"
            android:layout_width="100dip"
            android:layout_height="100dip"
            android:adjustViewBounds="true" />

        <TextView
            android:id="@+id/own_profile_picture_text"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_alignLeft="@+id/own_profile_picture"
            android:layout_alignRight="@+id/own_profile_picture"
            android:layout_centerVertical="true"
            android:gravity="center_horizontal|center_vertical"
            android:text="B"
            android:textColor="#FFFFFF"
            android:textSize="70sp"
            android:layout_alignTop="@+id/own_profile_picture"
            android:layout_alignBottom="@+id/own_profile_picture" />
    </RelativeLayout>

    <TextView
        android:id="@+id/own_profile_email_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/own_profile_email"
        android:textColor="@color/yasme_brombeer"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/own_profile_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="3dip"
        android:text=""
        android:textSize="10pt" />

    <TextView
        android:id="@+id/own_profile_id_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dip"
        android:layout_marginTop="15dip"
        android:text="@string/own_profile_id"
        android:textColor="@color/yasme_brombeer"
        android:textSize="8pt" />

    <TextView
        android:id="@+id/own_profile_id"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dip"
        android:layout_marginTop="3dip"
        android:text=""
        android:textSize="10pt" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/change_hint_text"
            android:id="@+id/change_hint"
            android:layout_gravity="right"
            android:layout_alignParentRight="false"
            android:layout_alignParentEnd="false"
            android:textColor="@android:color/darker_gray"
            android:textStyle="italic"
            android:layout_margin="2dip"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true" />
    </RelativeLayout>

</LinearLayout>
